--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pooyan Rahmanzadehgervi"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Computer Science PhD student"
   location         : "Auburn, AL, USA"
   employer         :
