--- a/_config.yml
+++ b/_config.yml
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  LinkedIn         : "https://www.linkedin.com/in/pooyan-rahmanzadehgervi-a29a73211/"
+  LinkedIn         : "pooyan-rahmanzadehgervi-a29a73211"
   orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "sxfsfs"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
