--- a/_config.yml
+++ b/_config.yml
@@ -99,17 +99,17 @@ author:
   github           : "pooyanrg"
   google_plus      :
   keybase          :
-  Instagram        : "klklklkl"
+  Instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   LinkedIn         : "pooyan-rahmanzadehgervi-a29a73211"
   orcid            : 
   pinterest        :
-  soundcloud       : "dsfsdffrwerwewew"
+  soundcloud       : 
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "dfsdfsdfsdfs"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
