--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   Instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  LinkedIn         : "pooyan-rahmanzadehgervi-a29a73211"
+  LinkedIn         : "oguztragay"
   orcid            : 
   pinterest        :
   soundcloud       : 
