--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Oguz Toragay"
+title                    : "Pooyan Rahmanzadehgervi"
 title_separator          : "@"
 name                     : &name "Oguz Toragay"
 description              : &description "personal description"
