--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,8 @@
 # Authors
 
 Name Name:
-  name        : "Oguz Toragay"
-  uri         : "https://oguztoragay.github.io//"
-  email       : "otoragay@ltu.edu"
-  bio         : "Assistant Professor in Mechanical, Robotics, and Industrial Engineering Department at Lawrence Technological University"
+  name        : "Pooyan Rahmanzadehgervi"
+  uri         : "https://pooyanrg.github.io//"
+  email       : "pooyan.rmz@gmail.com"
+  bio         : "Ph.D Fellow in Computer Science"
   avatar      : "bio-photo-2.jpg"
