--- a/_config.yml
+++ b/_config.yml
@@ -76,9 +76,9 @@ analytics:
 author:
   name             : "Pooyan Rahmanzadehgervi"
   avatar           : "Mahmoudi.jpg"
-  bio              : "Ph.D. Fellow in Computer Science"
+  bio              : "Ph.D. Fellow in Computer Science @ Auburn University"
   location         : "Auburn, AL"
-  employer         : "Auburn Univeristy"
+  employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=XSkv_7EAAAAJ&hl=en"
   email            : "pooyan.rmz@gmail.com"
   researchgate     : 
