--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Pooyan Rahmanzadehgervi"
 title_separator          : "@"
 name                     : &name "Pooyan Rahmanazadehgervi"
 description              : &description "personal description"
-url                      : https://oguztoragay.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://pooyanrg.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pooyanrg/pooyanrg.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
