--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ analytics:
 # Site Author
 author:
   name             : "Pooyan Rahmanzadehgervi"
-  avatar           : "Mahmoudi.jpg"
+  avatar           : "profile.jpg"
   bio              : "Ph.D. Fellow in Computer Science @ Auburn University"
   location         : "Auburn, AL"
   employer         : 
