--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,4 +5,4 @@ Name Name:
   uri         : "https://pooyanrg.github.io//"
   email       : "pooyan.rmz@gmail.com"
   bio         : "Ph.D Fellow in Computer Science"
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "profile.jpg"
