--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=XSkv_7EAAAAJ&hl=en"
   email            : "pooyan.rmz@gmail.com"
-  researchgate     : "Pooyan-Rahmanzadehgervi"
+  researchgate     : "https://www.researchgate.net/profile/Pooyan-Rahmanzadehgervi"
   github           : "pooyanrg"
   linkedin         : "pooyan-rahmanzadehgervi-a29a73211"
   orcid            : 
