--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
     
   - title: "Publications"
     url: /publications/
+
+  - title: "Posts"
+    url: /posts/
         
   - title: "CV"
     url: /my_cv/
