--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Pooyan Rahmanzadehgervi"
-  uri         : "https://pooyanrg.github.io//"
+  uri         : "https://pooyanrg.github.io/"
   email       : "pooyan.rmz@gmail.com"
   bio         : "Ph.D Fellow in Computer Science"
   avatar      : "profile.jpg"
